--- a/homepage.html
+++ b/homepage.html
@@ -9,7 +9,10 @@
     <!-- GOOGLE FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- FONTAWESOME 5.15.4 -->
     <link
@@ -22,7 +25,6 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="" />
 
     <!-- WEBPAGE_NAME -->
     <title>Beenchmark</title>
@@ -39,14 +41,16 @@
     <div class="instructions">
       <h2>Instructions</h2>
       <p>
-        We don't expect most engineers to know the answers to all of these questions, so don't worry if you're unsure of
-        a few of them.
+        We don't expect most engineers to know the answers to all of these questions, so don't worry
+        if you're unsure of a few of them.
       </p>
     </div>
 
     <ul class="list-ons">
       <li>Each question is <span>timed</span> and can only be <span>answered once.</span></li>
-      <li>Changing browser tab ot opening other windows will <span>invalidate the question.</span></li>
+      <li>
+        Changing browser tab ot opening other windows will <span>invalidate the question.</span>
+      </li>
       <li>This exam will take approx. <span>0-5 minutes</span></li>
     </ul>
 
