--- a/benchamark.html
+++ b/benchamark.html
@@ -10,6 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
 
     <!-- FONTAWESOME 5.15.4 -->
     <link
@@ -29,7 +33,11 @@
     <div id="app"></div>
 
     <div id="container-questions"></div>
-    <button id="next-question-btn">Prossima domanda</button>
+    <div>
+      <button id="next-question-btn">
+        Prossima domanda <span class="material-symbols-outlined"> keyboard_double_arrow_right </span>
+      </button>
+    </div>
 
     <!-- script start -->
     <script src="./js script/benchmark.js"></script>
