--- a/benchamark.html
+++ b/benchamark.html
@@ -22,6 +22,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
     <header><img src="./assets/epicode_logo.png" alt="logo" id="logosvg" /></header>
@@ -29,6 +30,7 @@
     <div id="timer"></div>
     <div id="container-questions"></div>
     <button id="next-question-btn">Prossima domanda</button>
+    <div id="lastpage"></div>
 
     <!-- script start -->
     <script src="./js script/benchmark.js"></script>
