--- a/benchamark.html
+++ b/benchamark.html
@@ -26,7 +26,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.1.1/chart.min.js"></script>
   </head>
   <body>
     <header><img src="./assets/epicode_logo.png" alt="logo" id="logosvg" /></header>
@@ -40,6 +40,11 @@
       </button>
     </div>
 
+    <div id="lastpage"></div>
+    <div id="result-message"></div>
+    <div id="percentualecorrette"></div>
+    <div id="percentualescorrette"></div>
+    <div id="container-btn2"></div>
     <!-- script start -->
     <script src="./js script/benchmark.js"></script>
     <!-- script end -->
