--- a/benchamark.html
+++ b/benchamark.html
@@ -40,8 +40,12 @@
       </button>
     </div>
 
+    <div id="titolo-result"></div>
+    <div id="sottotitolo"></div>
     <div id="lastpage"></div>
     <div id="result-message"></div>
+    <div id="corretto"></div>
+    <div id="sbagliato"></div>
     <div id="percentualecorrette"></div>
     <div id="percentualescorrette"></div>
     <div id="container-btn2"></div>
