--- a/feedback.html
+++ b/feedback.html
@@ -6,10 +6,7 @@
     <link rel="stylesheet" href="./assets/css/feed.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body>
@@ -22,7 +19,7 @@
     </div>
 
     <input type="text" placeholder="Write your comment here" id="comment" />
-    <button type="submit"><a href="www.epicode.com">MORE INFO</a></button>
+    <button type="submit"><a href="">MORE INFO</a></button>
 
     <script src="./js script/feed.js"></script>
   </body>
