--- a/homepage.html
+++ b/homepage.html
@@ -58,12 +58,12 @@
       <input type="checkbox" class="checkbox" />
       <p><span>I promise to asnwer myself without help from anyone</span></p>
       <div class="container-btn1">
-        <button class="button-page1"><a href="./benchamark.html">PROCEED</a></button>
+        <button class="button-page1">PROCEED</button>
       </div>
     </div>
 
     <!-- BEGIN_SCRIPT -->
-    <script src="./js script/homepage.js"></script>
+    <script src="./js script/home.js"></script>
     <!-- END_SCRIPT -->
   </body>
 </html>
