--- a/benchmark.html
+++ b/benchmark.html
@@ -49,6 +49,7 @@
     <div id="percentualecorrette"></div>
     <div id="percentualescorrette"></div>
     <div id="container-btn2"></div>
+    <div id="question-counter"></div>
     <!-- script start -->
     <script src="./js script/benchmark.js"></script>
     <!-- script end -->
