--- a/benchmark.html
+++ b/benchmark.html
@@ -50,6 +50,7 @@
     <div id="percentualescorrette"></div>
     <div id="container-btn2"></div>
     <div id="question-counter"></div>
+    <div id="result-counter"></div>
     <!-- script start -->
     <script src="./js script/benchmark.js"></script>
     <!-- script end -->
