--- a/homepage.html
+++ b/homepage.html
@@ -55,7 +55,8 @@
     </ul>
 
     <div class="container-checkbox">
-      <input type="checkbox" class="checkbox" />
+      <input type="checkbox" id="newcheckbox" class="checkbox" />
+      <label for="newcheckbox"></label>
       <p><span>I promise to asnwer myself without help from anyone</span></p>
       <div class="container-btn1">
         <button class="button-page1">PROCEED</button>
