--- a/feedback.html
+++ b/feedback.html
@@ -19,7 +19,7 @@
     </div>
 
     <input type="text" placeholder="Write your comment here" id="comment" />
-    <button type="submit"><a href="https://epicode.com/it/">MORE INFO</a></button>
+    <button type="submit"><a href="https://epicode.com/it/" target="_blank">MORE INFO</a></button>
 
     <script src="./js script/feed.js"></script>
   </body>
