Update with data stored

--- a/feedback.html
+++ b/feedback.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="./assets/css/feed.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -19,8 +22,10 @@
     </div>
 
     <input type="text" placeholder="Write your comment here" id="comment" />
-    <button type="submit"><a href="https://epicode.com/it/" target="_blank">MORE INFO</a></button>
-
+    <button type="submit">
+      <a href="https://epicode.com/it/" target="_blank" id="subButton">MORE INFO</a>
+    </button>
+    <div id="hiddenDiv" style="display: none"></div>
     <script src="./js script/feed.js"></script>
   </body>
 </html>
