Finish All with test

--- a/homepage.html
+++ b/homepage.html
@@ -53,7 +53,7 @@
     <div class="container-checkbox">
       <input type="checkbox" id="newcheckbox" class="checkbox" />
       <label for="newcheckbox"></label>
-      <p><span>I promise to asnwer myself without help from anyone</span></p>
+      <p><span>I promise to answer myself without help from anyone</span></p>
       <div class="container-btn1">
         <button class="button-page1">PROCEED</button>
       </div>
